Fix overlapping sidebar

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -95,7 +95,7 @@ canvas {
 .c-container {
   &--sidebar {
     width: 72%;
-    margin-left: 25%;
+    margin-left: 28%;
     position: relative;
   }
 }
@@ -290,7 +290,7 @@ canvas {
 
 .c-sidebar {
   position: fixed;
-  width: 28%;
+  width: 26%;
   padding-top: 3rem;
   padding-left: 1.75rem;
 }
